--- a/PRAC2_RedWineQuality-v0.7.Rmd
+++ b/PRAC2_RedWineQuality-v0.7.Rmd
@@ -412,39 +412,42 @@ Visualizamos los resultados.
 mosaic(matriz_confusion, shade = T, colorize = T, gp = gpar(fill = matrix(c("green3", "red2", "red2", "green3"), 2, 2)))
 ```
 El modelo de regresión logística nos ha dado un resultado de predicción de un 72% de acierto.
+Hemos de tener en cuenta que hemos simplificado la predicción a dos valores, considerando los vinos con puntuación de 5 o menos como malos y de más de 5 como buenos.
 En este caso, hemos entrenado el modelo con todos los datos y lo hemos evaluado sobre los mimos datos. 
 
 
+Vamos a crear un modelo predictivo sobre la variable quality, dividiendo los datos en un conjunto de entrenamiento y otro de test.
 
-Lo correcto sería crear un conjunto de entrenamiento y otro de test para el modelo.
 ```{r }
+
+# Generamos los dos conjuntos de datos
 set.seed(1234)
 trainIndex <- createDataPartition(datos_clean$quality, p = 0.8, list = FALSE)
 train_data <- datos_clean[trainIndex, ]
 test_data <- datos_clean[-trainIndex, ]
 
-#modelo_log_1 <- glm(quality_factor ~ alcohol + sulphates + volatile.acidity, data = train_data, family = "binomial")
-modelo_log_1 <- glm(quality ~ volatile.acidity + I(log10(chlorides)) + 
-    free.sulfur.dioxide + total.sulfur.dioxide + pH + I(log10(sulphates)) + 
-    alcohol, data = train_data, family = "gaussian")
+# Generamos nuestro modelo de regresión logística con las variables escogidas
+modelo_log_1 <- glm(quality ~ alcohol + sulphates + volatile.acidity, data = train_data, family = "gaussian")
 summary(modelo_log_1)
 
 ```
 
-
+Probamos el modelo con los datos de test. Las predicciones son de valores continuos, y en nuestro caso tenemos valores categóricos, por lo que realizaremos un ajuste del resultado por redondeo para obtener la matriz de confusión.
 
 ```{r }
-#predicciones_1 <- ifelse(test = modelo_log_1$fitted.values > 0.5, yes = 1, no = 0)
+# Predicción sobre los datos de test
 predicciones_1 <- predict(modelo_log_1, test_data)
 plot(test_data$quality, predicciones_1)
 
+# Creamos la matriz de confusión de los valores
 matriz_confusion_1 <- table(test_data$quality , round(predicciones_1), dnn = c("observaciones", "predicciones"))
 matriz_confusion_1
 
-
+# Calculamos el porcentaje de acierto de lso valores
+(62+51+6)/(2+1+0+62+25+0+26+51+3+1+16+6+0+0+1)
 
 ```
-En este caso observamos como el modelo tiene un 60% de acierto en la predicción.
+En este caso observamos como el modelo tiene un 61,34% de acierto en la predicción.
 
 
 
@@ -453,7 +456,7 @@ En este caso observamos como el modelo tiene un 60% de acierto en la predicción
 ***
 
 ```{r }
-confint(object = modelo_log, level = 0.95 )
+confint(object = modelo_log_1, level = 0.95 )
 ```
 
 
